add frontend to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,5 +29,18 @@ services:
       - DB_PASS=password
       - DB_NAME=v_desk_db
 
+  frontend:
+    build: ./frontend
+    command: npm run dev
+    volumes:
+      - ./frontend:/usr/src/app
+      - /usr/src/app/node_modules
+    ports:
+      - "5173:5173"
+    depends_on:
+      - backend
+    environment:
+      - VITE_API_URL=http://localhost:3000
+
 volumes:
   db_data:
