--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
 
   frontend:
     build: ./frontend
-    command: npm run dev
+    command: npm run dev -- --host
     volumes:
       - ./frontend:/usr/src/app
       - /usr/src/app/node_modules
